--- a/src/components/inputs/Label/Label.module.scss
+++ b/src/components/inputs/Label/Label.module.scss
@@ -7,6 +7,11 @@
   margin-left: calc(var(--spacing-2));
   z-index: 10;
   text-align: left;
+  letter-spacing: 0.5px;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: calc(-1 * var(--spacing-2));
+  }
 
   span {
     background-color: #fff;
